fix: Fix layout shift on nav link hover
- Add explicit width & height to prevent shift
- Update README

--- a/src/sass/components/_drawer.scss
+++ b/src/sass/components/_drawer.scss
@@ -53,12 +53,12 @@
 			margin: 0;
 			color: #757575;
 			border-bottom: none;
+			height: 60px;
 		
 			&.active,
 			&:hover {
 				font-weight: bold;
 				background-color: #e0e0e0;
-				text-shadow: none;
 				font-size: 1.5em;
 			}
 
